--- a/docs/css/main.css
+++ b/docs/css/main.css
@@ -16,7 +16,7 @@ header {
     gap: 25px;
     margin-top: 20px;
     padding: 25px 0px;
-    background-image: url(/assets/copyWriter.jpg);
+    background-image: url(../assets/copyWriter.jpg);
     background-size: cover;
     background-position: center;
     background-color: rgba(255, 255, 255, 0.5);
