--- a/docs/css/artwork.css
+++ b/docs/css/artwork.css
@@ -7,6 +7,9 @@
 body {
     overflow-x: hidden;
 }
+header a:nth-child(4) {
+    background: rgba(228, 228, 228, 0.7);
+}
 
 .writing-blog {
     text-decoration: none;
