--- a/docs/css/global.css
+++ b/docs/css/global.css
@@ -20,6 +20,7 @@ header {
     top: 0;
     z-index: 3;
     box-shadow: 0px 1px 1px rgb(156, 156, 156, 0.3);
+    font-family:'Times New Roman', Times, serif;
 }
 .header-line {
     border: 1px solid black;
