--- a/docs/css/testimonials.css
+++ b/docs/css/testimonials.css
@@ -2,6 +2,10 @@ body {
     font-family: Arial, Helvetica, sans-serif;
 }
 
+.header-buttons a:nth-child(1) {
+    background: rgba(228, 228, 228, 0.7);
+}
+
 .testimonials {
     display: flex;
     flex-direction: column;
